# c-_python_wrapped

./: .gitignore  README.md
src_dummy/: CMakeLists.txt  ada_dummy.cpp  pywrap.cpp
src_python/: example.py
